# riscv_translator

riscv_translator/: CMakeLists.txt  generate_c.cpp  main.cpp  main_old.cpp
